GTK3: fix gnome-terminal transparent scrollbar

--- a/src/themes/Kali/sass/gtk3/_applications.scss
+++ b/src/themes/Kali/sass/gtk3/_applications.scss
@@ -91,7 +91,7 @@ terminal-window,
 .mate-terminal {
   notebook {
     scrollbar {
-      background: none;
+      background: $base_color;
     }
   }
 }
